<resources>
    <string name="app_name">KhouryMeet</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="privacy">Due to privacy concerns, to view students in your classes you will need to log in.</string>
    <string name="login">Login</string>
    <string name="first_time_user">First time user?</string>
    <string name="create_account">Create Account</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Northeastern Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="John_Doe_name">John Doe</string>
    <string name="John_Doe_email">doe.j@northeastern.edu</string>
    <string name="John_Doe_username">john_doe</string>
    <string name="John_Doe_password">********</string>
    <string name="next">Next</string>
    <string name="academic_info">Academic Information</string>
    <string name="academic_program">Current academic program:</string>
    <string name="align">Current ALIGN</string>
    <string name="mscs">MSCS</string>
    <string name="first_semester">When did you start this program?</string>
    <string name="select_courses">Select courses in-progress:</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="save_profile">Save Profile</string>
    <string name="forgot_data">Forgot username/password?</string>
    <string name="sign_out">Sign Out</string>


    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="groups">Groups</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="current_courses">Current Courses:</string>
    <string name="no_current_courses">Current Courses: None</string>

    <string name="home_page">Home Page</string>
    <string name="my_profile">My Profile</string>
    <string name="search_students">Search For Students</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="group_chats">Group Chats</string>

    <string name="users_path">users/%s</string>
    <string name="preference_file_key">com.example.khourymeet.PREFERENCE_FILE_KEY</string>
    <string name="username_preferences_key">USERNAME_PREFERENCES</string>
    <string name="other_username_preferences_key">OTHER_USERNAME_PREFERENCES</string>

    <string name="mark_complete_warning">Marking %s complete will remove it from your current courses and add it to your past courses. Are you sure you want to continue?</string>
    <string name="mark_complete_yes">Yes, mark %s complete</string>
    <string name="mark_complete_no">No, I am still taking %s</string>

    <string name="withdraw_warning">Withdrawing from %s will remove it from your current courses. %s will NOT be added to your past courses. Are you sure you want to continue?</string>
    <string name="withdraw_yes">Yes, withdraw from %s</string>
    <string name="withdraw_no">No, do not withdraw from %s</string>

    <string name="delete_warning">Deleting %s will remove it from your past courses. Are you sure you want to continue?</string>
    <string name="delete_yes">Yes, delete %s</string>
    <string name="delete_no">No, do not delete %s</string>

    <string name="invisible_explanation">Marking a course "invisible" removes you from the list of mentors and hides the course from public profile. This functionality is not yet implemented.</string>
    <string name="invisible_understand">I Understand</string>

    <string name="too_many_courses">You are already registered for 2 courses. To add a course, either withdraw from a current course or mark one as completed.</string>
    <string name="go_back">Go Back</string>

    <string name="add_course">Add a Course</string>
    <string name="course_5001">CS5001</string>
    <string name="course_5003">CS5003</string>
    <string name="course_5004">CS5004</string>
    <string name="course_5006">CS5006</string>
    <string name="already_taking">"You are already taking %s! Please choose a different class."</string>
    <string name="took_before">"You already took %s! To take it again, please first delete it from your past classes."</string>
    <string name="not_added_current">%s not added because you are already taking it.</string>
    <string name="not_added_past">%s not added because you have taken it before.</string>
    <string name="add_course_yes">Add selected course</string>
    <string name="add_course_no">Do not add any course</string>
    <string name="save_warning">Do you wish to save your changes?</string>
    <string name="save_yes">Yes, save changes</string>
    <string name="save_no">No, keep editing profile</string>
    <string name="discard_warning">Do you wish to discard your changes? This includes any changes you made to your courses or personal information.</string>
    <string name="discard_yes">Yes, discard all changes</string>
    <string name="discard_no">No, keep editing profile</string>
    <string name="back_warning">Going back will discard any unsaved changes. To save your changes, click "Stay on this page" and then click "Save Changes."</string>
    <string name="back_yes">Go back to my profile</string>
    <string name="back_no">Stay on this page</string>
    <string name="name_warning">The Name field must include your full name. The only special characters allowed are hyphens.</string>


    <string name="go_to_profile">Go to Profile</string>

    <string name="back_to_profile">Back to Profile</string>
    <string name="save_changes">Save My Changes</string>
    <string name="discard_changes">Discard Changes</string>

    <string-array name="course_list">
        <item>@string/course_5001</item>
        <item>@string/course_5003</item>
        <item>@string/course_5004</item>
        <item>@string/course_5006</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cs5001">CS5001 PLACE</string>
    <string name="cs5003">CS5003 PLACE</string>

    <string name="password_security">Password Security</string>
    <string name="password_security_message">In order to have a secure password, please enter a password that is 8 characters long and contains one uppercase and lowercase letter as well as a number and a symbol</string>

    <string name="forgot_login_info">Forgot Username or Password?</string>
    <string name="enter_email_header">Email: </string>
    <string name="type_nu_email">Type Northeastern email here.</string>
    <string name="forgot_login_instructions">If you forgot your username and/or password, please enter your Northeastern email address below. You will receive an email with instructions on what to do next to regain access to your account.</string>
    <string name="send_email">Send Me An Email</string>
    <string name="back_login">Go Back To Login</string>
    <string name="notify_email_sent">This functionality has not been implemented in this iteration of the interface. Once implemented, this dialog would read: "An email has been sent to your Northeastern email address. Please follow those instructions to access your account."</string>

    <string name="name_placeholder">Name</string>
    <string name="open">Open</string>
</resources>